--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<html>
-<head>
-Hello
-</head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Hello!</title>
+   
+    <script src="/todo.js" defer></script>
+  </head>  
+  <body>
+    <h1>Hi there!</h1>
+
+  </body>
 </html>
