--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>  
   <body>
     <h1>Hi there!</h1>
+    <ul>
+      <li>Apples</li>
+      <li>Bananas</li>
+    </ul>
 
   </body>
 </html>
